--- a/templates/web/booking_to_complete.html
+++ b/templates/web/booking_to_complete.html
@@ -125,7 +125,7 @@
 
                 document.location.href = "/booking/"+this.dataset['id'];
             });
-            update_events();
+            add_form_events();
             do_last();
         }
         function build_table(json, cols, tableid) {
