--- a/templates/web/booking_to_paid.html
+++ b/templates/web/booking_to_paid.html
@@ -91,7 +91,7 @@
 
                     // put data in a table;
                     bookings_table(json);
-                    update_events();
+                    add_form_events();
                     do_last();
 
 
