--- a/templates/base.html
+++ b/templates/base.html
@@ -102,15 +102,14 @@
                         <span class="badge booking_status_1">{{ num_requested }}</span>
                     </a>
                     <ul class="dropdown-menu extended tasks-bar">
-                        <li>
-                            <p class="">You have <span>{{ num_requested|length }}</span> requests for tunings</p>
-                        </li>
-                        {%  for item in list_requested %}
+
+                        {%  for item in list_requested|slice:":6" %}
                             <li >
                                 <a href="{{item.get_absolute_url}}">
                                     <div class="task-info clearfix">
                                         <div class="desc pull-left">
-                                            <h5>{{ item.where }}</h5>
+                                            <h5>{{ item.where }}<br />
+                                                {{ item.what }}</h5>
 
                                             <p>requested at {{ item.requested_at|time:"h:i a" }}</p>
                                             <p>for {{ item.when|date:"DATETIME_FORMAT" }}</p>
@@ -124,10 +123,11 @@
 
                         {% endfor %}
 
-
-                        <li class="external">
-                            <a href="{%  url "assign_tuner" %}">Browse All Unassigned Tunings</a>
-                        </li>
+                        {% if list_requested|length > 6 %}
+                            <li class="external">
+                                <a href="/bookings/?status=1">Browse all {{ list_requested|length }} Requested Bookings</a>
+                            </li>
+                        {% endif %}
                     </ul>
                 </li>
 
@@ -138,16 +138,14 @@
                         <i class="fa booking_status_3_icon"></i>
                         <span class="badge booking_status_3">{{ num_current }}</span>
                     </a>
-                    <ul class="dropdown-menu extended inbox">
-                        <li>
-                            <p class="">You have <span>{{ num_current }}</span> pending tunings</p>
-                        </li>
-                        {%  for item in list_current %}
+                    <ul class="dropdown-menu extended tasks-bar">
+
+                        {%  for item in list_current|slice:":6" %}
                             <li >
                                 <a href="{{item.get_absolute_url}}">
                                     <div class="task-info clearfix">
                                         <div class="desc pull-left">
-                                            <h5>{{ item.where }}</h5>
+                                            <h5>{{ item.where }}<br />{{ item.what }}</h5>
                                             <p>{{ item.when }}</p>
                                             <p>Tuner: {{ item.tuner }}</p>
                                         </div>
@@ -159,9 +157,11 @@
                             </li>
                         {%  endfor %}
 
-                        <li>
-                            <a href="{%  url "to_completed" %}">Browse All Pending Bookings</a>
-                        </li>
+                        {% if list_requested|length > 6 %}
+                            <li class="external">
+                                <a href="/bookings/?status=3">Browse all {{ list_current|length }} Pending Bookings</a>
+                            </li>
+                        {% endif %}
                     </ul>
                 </li>
 
@@ -172,16 +172,14 @@
                         <i class="fa booking_status_4_icon"></i>
                         <span class="badge booking_status_4">{{ num_to_complete }}</span>
                     </a>
-                    <ul class="dropdown-menu extended inbox">
-                        <li>
-                            <p class="">You have <span>{{ num_to_complete }}</span> incomplete tunings</p>
-                        </li>
-                        {%  for item in list_to_complete %}
+                    <ul class="dropdown-menu extended tasks-bar">
+
+                        {%  for item in list_to_complete|slice:":6" %}
                             <li >
                                 <a href="{{item.get_absolute_url}}">
                                     <div class="task-info clearfix">
                                         <div class="desc pull-left">
-                                            <h5>{{ item.where }}</h5>
+                                            <h5>{{ item.where }}<br />{{ item.what }}</h5>
                                             <p>{{ item.when }}</p>
                                             <p>Tuner: {{ item.tuner }}</p>
                                         </div>
@@ -193,9 +191,11 @@
                             </li>
                         {%  endfor %}
 
-                        <li>
-                            <a href="{%  url "to_completed" %}">Browse All Incomplete Tunings</a>
-                        </li>
+                        {% if list_requested|length > 6 %}
+                            <li class="external">
+                                <a href="/bookings/?status=4">Browse all {{ list_to_complete|length }} Incomplete Bookings</a>
+                            </li>
+                        {% endif %}
                     </ul>
                 </li>
 
@@ -206,16 +206,14 @@
                         <i class="fa booking_status_5_icon"></i>
                         <span class="badge booking_status_5">{{ num_complete }}</span>
                     </a>
-                    <ul class="dropdown-menu extended inbox">
-                        <li>
-                            <p class="">You have <span>{{ num_complete }}</span> pending payment</p>
-                        </li>
-                        {%  for item in list_complete %}
+                    <ul class="dropdown-menu extended tasks-bar">
+
+                        {%  for item in list_complete|slice:":6" %}
                             <li >
                                 <a href="{{item.get_absolute_url}}">
                                     <div class="task-info clearfix">
                                         <div class="desc pull-left">
-                                            <h5>{{ item.where }}</h5>
+                                            <h5>{{ item.where }}<br />{{ item.what }}</h5>
                                             <p>{{ item.when }}</p>
                                             <p>Tuner: {{ item.tuner }}</p>
                                         </div>
@@ -227,9 +225,11 @@
                             </li>
                         {%  endfor %}
 
-                        <li>
-                            <a href="{%  url "to_paid" %}">Browse All Unpaid Tunings</a>
-                        </li>
+                        {% if list_complete|length > 6 %}
+                            <li class="external">
+                                <a href="/bookings/?status=6">Browse all {{ list_complete|length }} Unpaid Bookings</a>
+                            </li>
+                        {% endif %}
                     </ul>
                 </li>
 
@@ -332,13 +332,13 @@
 
                         {% if user.is_booker %}
 
-                                 <li><a href="/bookings/">Browse Bookings</a></li>
+                            <li><a href="/bookings/">Browse Bookings</a></li>
 
                         {% endif %}
 
-                         {% if user.is_tuner %}
+                        {% if user.is_tuner %}
 
-                                 <li><a href="/bookings/">Browse Bookings</a></li>
+                            <li><a href="/bookings/">Browse Bookings</a></li>
 
                         {% endif %}
 
@@ -492,7 +492,7 @@
 
 
     function do_last() {
-        console.log('do_last base');
+
         {#        // make left side nav accordian#}
         {#        $('#nav-accordion').dcAccordion({#}
         {#            eventType: 'click',#}
