--- a/web/static/css/tuning.css
+++ b/web/static/css/tuning.css
@@ -37,12 +37,18 @@ a.logo {
     background-color: #7EBCD4;
         color: white;
 }
+.booking_status_7 {
+    background-color: #7EBCD4;
+        color: white;
+}
+
 .booking_status_8 {
     background-color: #8C98AB;
         color: white;
 }
 .booking_status_9 {
-    background-color: #fdd752;
+    background-color: #e6e6e6;
+     color: black !important ;
 }
 tr.booking_status_0{
     background-color: rgba(250, 250, 250, 1);
@@ -65,13 +71,16 @@ tr.booking_status_5{
 tr.booking_status_6{
     background-color: rgba(126, 188, 212, 0.46);
 }
+tr.booking_status_7{
+    background-color: rgba(126, 188, 212, 0.46);
+}
 
 tr.booking_status_8{
     background-color: rgba(140, 152, 171, 0.52);;
 }
 
 tr.booking_status_9{
-    background-color: rgba(253, 215, 82, 0.49);
+    background-color: rgba(213, 213, 213, 0.49);
 }
 
 .booking_status_0_icon:before, .booking_status_1_icon:before  {
@@ -84,6 +93,12 @@ tr.booking_status_9{
     content: "\f024";
 }
 .booking_status_5_icon:before  {
+    content: "\f154";
+}
+.booking_status_6_icon:before  {
+    content: "\f154";
+}
+.booking_status_7_icon:before  {
     content: "\f154";
 }
 .booking_status_8_icon:before  {
